test/fail_compilation/diag6743.d
/*
REQUIRED_ARGS: -run test.exe
COMPILE_OUTPUT:
---
Error: -run must be followed by a source file, not 'test.exe'
---
*/

